use Prettier for Apex cls files

--- a/.prettierrc
+++ b/.prettierrc
@@ -14,7 +14,7 @@
       "options": { "parser": "html" }
     },
     {
-      "files": "*.{apex}",
+      "files": "*.{cls, apex}",
       "options": { "parser": "apex" }
     }
   ],
