dependabot and config (to trigger dependabot PRs to close) (#26)
* config files

* add dependabot auto-check

--- a/.prettierrc
+++ b/.prettierrc
@@ -18,5 +18,6 @@
       "options": { "parser": "apex" }
     }
   ],
-  "plugins": ["prettier-plugin-apex"]
+  "plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
+  "$schema": "https://json.schemastore.org/prettierrc"
 }
