--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
     "@salesforce/sfdx-lwc-jest": "^3.1.0",
     "@salesforce/sfdx-scanner": "^3.18.0",
-    "eslint": "^8.53.0",
+    "eslint": "*",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
