--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 .vim-force.com/
 yarn.lock
 .sfdx/
-.sf/
 .localdevserver/
 debug.log
 DEVHUB_SFDX_URL.txt
@@ -15,7 +14,7 @@ plugins/ExtraCodeCoverage
 .sf/
 rollup-namespaced/source
 sfge-*.log.gz
-#scripts/test.ps1
+scripts/test.ps1
 #PMD
 .pmdCache
 #OSX
