--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   "author": "james.simone",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/eslint-parser": "^7.23.3",
-    "@jongpie/sfdx-bummer-plugin": "^0.0.18",
-    "@ljharb/eslint-config": "^21.1.0",
-    "@lwc/eslint-plugin-lwc": "^1.7.0",
-    "@prettier/plugin-xml": "^3.2.2",
-    "@salesforce/cli": "^2.17.14",
-    "@salesforce/eslint-config-lwc": "^3.5.2",
-    "@salesforce/eslint-plugin-lightning": "^1.0.0",
-    "@salesforce/sfdx-lwc-jest": "^3.1.0",
+    "@babel/core": "7.23.3",
+    "@babel/eslint-parser": "7.23.3",
+    "@jongpie/sfdx-bummer-plugin": "0.0.18",
+    "@ljharb/eslint-config": "21.1.0",
+    "@lwc/eslint-plugin-lwc": "1.7.0",
+    "@prettier/plugin-xml": "3.2.2",
+    "@salesforce/cli": "2.17.14",
+    "@salesforce/eslint-config-lwc": "3.5.2",
+    "@salesforce/eslint-plugin-lightning": "1.0.0",
+    "@salesforce/sfdx-lwc-jest": "3.1.0",
     "@salesforce/sfdx-scanner": "^3.18.0",
     "eslint": "*",
-    "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-apex": "^2.0.1"
+    "eslint-config-prettier": "9.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.1.0",
+    "prettier": "3.1.0",
+    "prettier-plugin-apex": "2.0.1"
   },
   "keywords": [
     "salesforce",
