--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,34 +37,24 @@ jobs:
     steps:
       # Checkout the code
       - name: 'Checkout source code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
       - name: 'Setup node'
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
-
-      - name: 'Restore node_modules cache'
-        id: cache-npm
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            npm-${{ env.cache-name }}-
-            npm-
+          node-version: 'lts/*'
+          cache: 'npm'
 
       - name: 'Install NPM'
-        if: steps.cache-npm.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: 'Run LWC Unit Tests'
         run: npm run test:lwc
 
       - name: 'Upload code coverage for LWC to Codecov.io'
-        uses: codecov/codecov-action@v2.0.2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: LWC
@@ -81,8 +71,8 @@ jobs:
         shell: bash
         run: |
           echo "${{ env.DEVHUB_SERVER_KEY }}" > ./jwt-server.key
-          npx sfdx force:auth:jwt:grant --clientid ${{ env.DEVHUB_CONSUMER_KEY }} --username ${{ env.DEVHUB_USERNAME }} --jwtkeyfile ./jwt-server.key --setdefaultdevhubusername
-          npx sfdx config:set defaultusername=${{ env.DEVHUB_USERNAME }}
+          npx sf org login jwt --client-id ${{ env.DEVHUB_CONSUMER_KEY }} --username ${{ env.DEVHUB_USERNAME }} --jwt-key-file ./jwt-server.key --set-default-dev-hub
+          npx sf config set target-org ${{ env.DEVHUB_USERNAME }}
         env:
           DEVHUB_USERNAME: ${{ secrets.DEVHUB_USERNAME }}
           DEVHUB_CONSUMER_KEY: ${{ secrets.DEVHUB_CONSUMER_KEY }}
@@ -98,7 +88,7 @@ jobs:
 
       # Upload Apex code coverage data
       - name: 'Upload Apex code coverage for Apex to Codecov.io'
-        uses: codecov/codecov-action@v2.0.2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: Apex
