--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex-rollup",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "description": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
   "repository": {
     "type": "git",
@@ -9,23 +9,23 @@
   "author": "james.simone",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "latest",
-    "@babel/eslint-parser": "latest",
-    "@jongpie/sfdx-bummer-plugin": "latest",
-    "@ljharb/eslint-config": "latest",
-    "@lwc/eslint-plugin-lwc": "latest",
-    "@prettier/plugin-xml": "latest",
-    "@salesforce/eslint-config-lwc": "latest",
-    "@salesforce/eslint-plugin-lightning": "latest",
-    "@salesforce/sfdx-lwc-jest": "0.12.5",
-    "@salesforce/sfdx-scanner": "3.16.0",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "husky": "latest",
-    "lint-staged": "latest",
-    "prettier-plugin-apex": "latest",
-    "prettier": "latest",
-    "sfdx-cli": "latest"
+    "@babel/core": "7.23.3",
+    "@babel/eslint-parser": "7.23.3",
+    "@jongpie/sfdx-bummer-plugin": "0.0.18",
+    "@ljharb/eslint-config": "21.1.0",
+    "@lwc/eslint-plugin-lwc": "1.7.0",
+    "@prettier/plugin-xml": "3.2.2",
+    "@salesforce/cli": "2.17.14",
+    "@salesforce/eslint-config-lwc": "3.5.2",
+    "@salesforce/eslint-plugin-lightning": "1.0.0",
+    "@salesforce/sfdx-lwc-jest": "3.1.0",
+    "@salesforce/sfdx-scanner": "^3.18.0",
+    "eslint": "*",
+    "eslint-config-prettier": "9.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.1.0",
+    "prettier": "3.1.0",
+    "prettier-plugin-apex": "2.0.1"
   },
   "keywords": [
     "salesforce",
