--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -30,6 +30,7 @@
         "apex-rollup-namespaced@1.1.3": "04t6g000008Oa8lAAC",
         "apex-rollup-namespaced@1.1.4": "04t6g000008Oa9ZAAS",
         "apex-rollup-namespaced@1.1.5": "04t6g000008OaAcAAK",
-        "apex-rollup-namespaced@1.1.6": "04t6g000008OaFnAAK"
+        "apex-rollup-namespaced@1.1.6": "04t6g000008OaFnAAK",
+        "apex-rollup-namespaced@1.1.7": "04t6g000008OaHPAA0"
     }
 }
