--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -108,6 +108,7 @@
         "apex-rollup@1.6.3": "04t6g000008Oa8gAAC",
         "apex-rollup@1.6.4": "04t6g000008Oa9UAAS",
         "apex-rollup@1.6.5": "04t6g000008OaAXAA0",
-        "apex-rollup@1.6.6": "04t6g000008OaFiAAK"
+        "apex-rollup@1.6.6": "04t6g000008OaFiAAK",
+        "apex-rollup@1.6.7": "04t6g000008OaHKAA0"
     }
 }
