--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "CDC create updates",
-            "versionNumber": "1.6.7.0",
+            "versionName": "Fixes null pointer exception for some rollups",
+            "versionNumber": "1.6.8.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,14 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.87-0": "04t6g000008C72BAAS",
-        "apex-rollup@1.5.88-0": "04t6g000008C734AAC",
-        "apex-rollup@1.5.89-0": "04t6g000008C77gAAC",
-        "apex-rollup@1.6.0-0": "04t6g000008C7AQAA0",
-        "apex-rollup@1.6.1-0": "04t6g000008OZwYAAW",
-        "apex-rollup@1.6.2-0": "04t6g000008Oa7TAAS",
-        "apex-rollup@1.6.3": "04t6g000008Oa8gAAC",
-        "apex-rollup@1.6.4": "04t6g000008Oa9UAAS",
         "apex-rollup@1.6.5": "04t6g000008OaAXAA0",
         "apex-rollup@1.6.6": "04t6g000008OaFiAAK",
         "apex-rollup@1.6.7": "04t6g000008OaHKAA0"
