--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes null pointer exception for some rollups",
-            "versionNumber": "1.6.8.0",
+            "versionName": "Safer RollupParentResetProcessor queries",
+            "versionNumber": "1.6.9.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -102,6 +102,7 @@
         "apex-rollup@1.6.5": "04t6g000008OaAXAA0",
         "apex-rollup@1.6.6": "04t6g000008OaFiAAK",
         "apex-rollup@1.6.7": "04t6g000008OaHKAA0",
-        "apex-rollup@1.6.8": "04t6g000008OaJLAA0"
+        "apex-rollup@1.6.8": "04t6g000008OaJLAA0",
+        "apex-rollup@1.6.9": "04t6g000008OaJkAAK"
     }
 }
