--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Safer RollupParentResetProcessor queries",
-            "versionNumber": "1.6.9.0",
+            "versionName": "Better control over when Batch class versus Queueable class is used for rollup conductor (the means by which Apex Rollup goes async)",
+            "versionNumber": "1.6.10.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
