--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Better control over when Batch class versus Queueable class is used for rollup conductor (the means by which Apex Rollup goes async)",
-            "versionNumber": "1.6.10.0",
+            "versionName": "Continuation from v1.6.5 with big CPU time improvements made to Flow-based rollups, particularly for the update record code path",
+            "versionNumber": "1.6.11.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,9 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.5": "04t6g000008OaAXAA0",
-        "apex-rollup@1.6.6": "04t6g000008OaFiAAK",
-        "apex-rollup@1.6.7": "04t6g000008OaHKAA0",
         "apex-rollup@1.6.8": "04t6g000008OaJLAA0",
         "apex-rollup@1.6.9": "04t6g000008OaJkAAK",
         "apex-rollup@1.6.10": "04t6g000008OaLCAA0"
