--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup-namespaced",
             "path": "rollup-namespaced/source/rollup",
-            "versionName": "Continuation from v1.6.5 with big CPU time improvements made to Flow-based rollups, particularly for the update record code path",
-            "versionNumber": "1.1.10.0",
+            "versionName": "Flow bugfix for flows triggered via Apex that both update AND delete records",
+            "versionNumber": "1.1.11.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -21,19 +21,10 @@
     "sourceApiVersion": "58.0",
     "packageAliases": {
         "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
-        "apex-rollup-namespaced@1.0.51-0": "04t6g000008C71cAAC",
-        "apex-rollup-namespaced@1.0.52-0": "04t6g000008C72GAAS",
-        "apex-rollup-namespaced@1.0.53-0": "04t6g000008C739AAC",
-        "apex-rollup-namespaced@1.1.0-0": "04t6g000008C7AVAA0",
-        "apex-rollup-namespaced@1.1.1-0": "04t6g000008OZwdAAG",
-        "apex-rollup-namespaced@1.1.2-0": "04t6g000008Oa7YAAS",
-        "apex-rollup-namespaced@1.1.3": "04t6g000008Oa8lAAC",
-        "apex-rollup-namespaced@1.1.4": "04t6g000008Oa9ZAAS",
-        "apex-rollup-namespaced@1.1.5": "04t6g000008OaAcAAK",
-        "apex-rollup-namespaced@1.1.6": "04t6g000008OaFnAAK",
         "apex-rollup-namespaced@1.1.7": "04t6g000008OaJQAA0",
         "apex-rollup-namespaced@1.1.8": "04t6g000008OaJpAAK",
         "apex-rollup-namespaced@1.1.9": "04t6g000008OaLHAA0",
-        "apex-rollup-namespaced@1.1.10": "04t6g000008OaOBAA0"
+        "apex-rollup-namespaced@1.1.10": "04t6g000008OaOBAA0",
+        "apex-rollup-namespaced@1.1.11": "04t6g000008OaOzAAK"
     }
 }
