--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Continuation from v1.6.5 with big CPU time improvements made to Flow-based rollups, particularly for the update record code path",
-            "versionNumber": "1.6.11.0",
+            "versionName": "Flow bugfix for flows triggered via Apex that both update AND delete records",
+            "versionNumber": "1.6.12.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -100,9 +100,8 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.8": "04t6g000008OaJLAA0",
-        "apex-rollup@1.6.9": "04t6g000008OaJkAAK",
         "apex-rollup@1.6.10": "04t6g000008OaLCAA0",
-        "apex-rollup@1.6.11": "04t6g000008OaO6AAK"
+        "apex-rollup@1.6.11": "04t6g000008OaO6AAK",
+        "apex-rollup@1.6.12": "04t6g000008OaOuAAK"
     }
 }
