--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Flow bugfix for flows triggered via Apex that both update AND delete records",
-            "versionNumber": "1.6.12.0",
+            "versionName": "Spring 24",
+            "versionNumber": "1.6.13.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -84,7 +84,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "59.0",
+    "sourceApiVersion": "60.0",
     "packageAliases": {
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
@@ -102,6 +102,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.6.10": "04t6g000008OaLCAA0",
         "apex-rollup@1.6.11": "04t6g000008OaO6AAK",
-        "apex-rollup@1.6.12": "04t6g000008OaOuAAK"
+        "apex-rollup@1.6.12": "04t6g000008OaOuAAK",
+        "apex-rollup@1.6.13": "04t6g000008OaUUAA0"
     }
 }
