--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -101,8 +101,7 @@
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.6.14": "04t6g000008OaYrAAK",
-        "apex-rollup@1.6.15": "04t6g000008OaZ6AAK",
+        "apex-rollup@1.6.15": "04t6g000008OaZQAA0",
         "apex-rollup@1.6.16": "04t6g000008OaZGAA0"
-    },
-    "target-dev-hub": "tester@sheandjim.com"
+    }
 }
