--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -100,11 +100,8 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.10": "04t6g000008OaLCAA0",
-        "apex-rollup@1.6.11": "04t6g000008OaO6AAK",
-        "apex-rollup@1.6.12": "04t6g000008OaOuAAK",
-        "apex-rollup@1.6.13": "04t6g000008OaUUAA0",
         "apex-rollup@1.6.14": "04t6g000008OaYrAAK",
-        "apex-rollup@1.6.15": "04t6g000008OaZ6AAK"
+        "apex-rollup@1.6.15": "04t6g000008OaZQAA0",
+        "apex-rollup@1.6.16": "04t6g000008OaZVAA0"
     }
 }
