--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@babel/eslint-parser": "7.23.3",
-    "@jongpie/sfdx-bummer-plugin": "0.0.19",
+    "@jongpie/sfdx-bummer-plugin": "^0.0.20",
     "@ljharb/eslint-config": "21.1.0",
     "@lwc/eslint-plugin-lwc": "1.7.2",
     "@prettier/plugin-xml": "3.2.2",
