--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Continued bulk full recalc work",
-            "versionNumber": "1.6.15.0",
+            "versionName": "Adds CMDT support for Task/User/Event and other previously unsupported objects",
+            "versionNumber": "1.6.17.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -102,6 +102,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.6.14": "04t6g000008OaYrAAK",
         "apex-rollup@1.6.15": "04t6g000008OaZQAA0",
-        "apex-rollup@1.6.16": "04t6g000008OaZVAA0"
+        "apex-rollup@1.6.16": "04t6g000008OaZVAA0",
+        "apex-rollup@1.6.17": "04t6g000008OafFAAS"
     }
 }
