--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Adds CMDT support for Task/User/Event and other previously unsupported objects",
-            "versionNumber": "1.6.17.0",
+            "versionName": "More accurate counts when adding up relevant children/parents prior to going async. More accurate REFRESH calculations for rollups to multiple parents",
+            "versionNumber": "1.6.18.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,6 +103,7 @@
         "apex-rollup@1.6.14": "04t6g000008OaYrAAK",
         "apex-rollup@1.6.15": "04t6g000008OaZQAA0",
         "apex-rollup@1.6.16": "04t6g000008OaZVAA0",
-        "apex-rollup@1.6.17": "04t6g000008OafFAAS"
+        "apex-rollup@1.6.17": "04t6g000008OafFAAS",
+        "apex-rollup@1.6.18": "04t6g000008Oak1AAC"
     }
 }
