--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -71,9 +71,10 @@
             "versionName": "Updating code coverage",
             "versionNumber": "0.0.20.0",
             "default": false,
+            "scopeProfiles": true,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.6.0-0"
+                    "package": "apex-rollup@1.6.19"
                 }
             ]
         },
@@ -90,8 +91,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rRAAS",
         "Apex Rollup - Extra Code Coverage@0.0.20-0": "04t6g000008C78yAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.21": "04t6g000008OakpAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -100,7 +101,7 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.17": "04t6g000008OafFAAS",
-        "apex-rollup@1.6.18": "04t6g000008Oak1AAC"
+        "apex-rollup@1.6.18": "04t6g000008Oak1AAC",
+        "apex-rollup@1.6.19": "04t6g000008OakkAAC"
     }
 }
