--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "More accurate counts when adding up relevant children/parents prior to going async. More accurate REFRESH calculations for rollups to multiple parents",
-            "versionNumber": "1.6.18.0",
+            "versionName": "More accurate checking of org async limits while testing",
+            "versionNumber": "1.6.19.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -71,9 +71,10 @@
             "versionName": "Updating code coverage",
             "versionNumber": "0.0.20.0",
             "default": false,
+            "scopeProfiles": true,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.6.0-0"
+                    "package": "apex-rollup@1.6.19"
                 }
             ]
         },
@@ -90,8 +91,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rRAAS",
         "Apex Rollup - Extra Code Coverage@0.0.20-0": "04t6g000008C78yAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.21": "04t6g000008OakpAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -100,10 +101,7 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.14": "04t6g000008OaYrAAK",
-        "apex-rollup@1.6.15": "04t6g000008OaZQAA0",
-        "apex-rollup@1.6.16": "04t6g000008OaZVAA0",
-        "apex-rollup@1.6.17": "04t6g000008OafFAAS",
-        "apex-rollup@1.6.18": "04t6g000008Oak1AAC"
+        "apex-rollup@1.6.18": "04t6g000008Oak1AAC",
+        "apex-rollup@1.6.19": "04t6g000008Oal4AAC"
     }
 }
