Beginning of migration to null coalesce operator now that sfdx-scanner supports the syntax

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@salesforce/eslint-config-lwc": "3.5.2",
     "@salesforce/eslint-plugin-lightning": "1.0.0",
     "@salesforce/sfdx-lwc-jest": "3.1.1",
-    "@salesforce/sfdx-scanner": "^3.22.0",
+    "@salesforce/sfdx-scanner": "^4.0.0",
     "eslint": "*",
     "eslint-config-prettier": "9.1.0",
     "husky": "8.0.3",
@@ -51,7 +51,7 @@
     "prepare": "husky install && sf plugins link ./node_modules/@salesforce/sfdx-scanner && sf plugins link ./node_modules/@jongpie/sfdx-bummer-plugin",
     "prettier": "prettier",
     "scan": "npm run lint:verify && npm run scan:pmd",
-    "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target .,!plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3 --preview-pmd7",
+    "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target .,!plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3",
     "scan:graph": "sf scanner run -e sfge -p . --target 'rollup'",
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
