--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
             "path": "rollup",
             "scopeProfiles": true,
             "versionName": "Updating to null coalesce operator when applicable",
-            "versionNumber": "1.6.20.0",
+            "versionNumber": "1.6.21.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,6 +103,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.6.18": "04t6g000008Oak1AAC",
         "apex-rollup@1.6.19": "04t6g000008Oal4AAC",
-        "apex-rollup@1.6.20": "04t6g000008OanPAAS"
+        "apex-rollup@1.6.20": "04t6g000008OanPAAS",
+        "apex-rollup@1.6.21": "04t6g000008OatsAAC"
     }
 }
